tests/compile-fail/integration__integration__msg_features__integer_meta_key_normalization.snap
---
source: tests/integration/msg_features.rs
expression: stderr
---
error: duplicate metadata field '0'
  ┌─ <input>:8:9
  │
6 │         0: {script: "script0"},
  │         - previously supplied here
7 │         1: {script: "script0"},
8 │         0x0: {script: "script0"},
  │         ^^^ duplicate key


